--- a/i18n/en_GB/index.json
+++ b/i18n/en_GB/index.json
@@ -1,11 +1,11 @@
 {
   "index": {
-    "description_p1": "eosDAC is a decentralized autonomous community which means it is owned and operated by the token holders who agree to the constitution and register as members of the community.",
-    "description_p2": "When completed, this member client will allow you to read the constitution, register as a member, submit worker proposals, register as a custodian candidate, vote on custodians, transfer tokens, and more. If you have any questions, please reach out to us using the links below.",
+    "description_p1": "eosUSD DAC is a decentralized autonomous community which means it is owned and operated by the token holders who agree to the constitution and register as members of the community.",
+    "description_p2": "This member client will allow you to read the constitution, register as a member, submit worker proposals, register as a custodian candidate, vote on custodians, transfer tokens, and more. If you have any questions, please reach out to us using the links below.",
     "discord_description": "eosDAC exists as an active, engaged community building tools to enable other DACs. Discord is where we bring our skills together and coordinate our activites.",
-    "eosdac": "eosdac.io",
+    "eosdac": "eosUSD.com",
     "error_occured": "Something went wrong!",
-    "join_discord": "Join our Community on Discord",
+    "join_discord": "Join eosDAC Community on Discord",
     "key_features": "Key Features",
     "open_discord": "open discord",
     "read_constitution": "Constitution",
@@ -20,8 +20,8 @@
     "visit_eosdac": "Visit our Website eosdac.io",
     "vote_cust": "Vote Custodians",
     "wallet": "Wallet",
-    "website_description": "Everything you'd like to know about eosDAC can be found on our website at eosdac.io. Visit today and learn more about the community run EOS block producer.",
-    "welcome_to_esodac_member_client": "Welcome to the eosDAC Member Client",
+    "website_description": "Everything you'd like to know about eosUSD DAC can be found on our website at eosUSD.com. Visit today and learn more about the community run EOS block producer.",
+    "welcome_to_esodac_member_client": "Welcome to the eosUSD DAC Member Client",
     "your_email": "Your Email",
     "your_language": "Your Language"
   },
