--- a/i18n/en_US/index.json
+++ b/i18n/en_US/index.json
@@ -1,18 +1,18 @@
 {
   "meta": {
-    "title": "eosUSD DAC Memberclient",
-    "keywords": "eosusd, eosdac, member, eos, dac, token, custodian, blockchain, crypto, decentralized, autonomous",
+    "title": "VIGOR Memberclient",
+    "keywords": "vig, eosdac, member, eos, dac, token, custodian, blockchain, crypto, decentralized, autonomous",
     "noscript": "To view this webpage you need to have javascript enabled"
   },
   "index": {
-    "description_p1": "eosUSD DAC is a decentralized autonomous community which means it is owned and operated by the token holders who agree to the constitution and register as members of the community.",
-    "description_p2": "This member client will allow you to read the constitution, register as a member, submit worker proposals, register as a custodian candidate, vote on custodians, transfer tokens, and more. If you have any questions, please reach out to us using the links below.",
-    "discord_description": "eosDAC exists as an active, engaged community building tools to enable other DACs. Discord is where we bring our skills together and coordinate our activites.",
-    "eosdac": "eosdac.io",
+    "description_p1": "VIGOR is a decentralized autonomous community which means it is owned and operated by the token holders who agree to the constitution and register as members of the community.",
+    "description_p2": "This member client will allow you to read and sign the constitution, register as a member, submit worker proposals, register as a custodian candidate, vote on custodians, transfer tokens, and more. Join us by signing the constitution and the DAC will send you VIG tokens enabling you to register as a candidate.",
+    "discord_description": "VIGOR is building vUSD a crypto-backed stablecoin on the EOS blockchain powered by our VIG token. Telegram is where we bring our skills together and coordinate our activites.",
+    "eosdac": "whitepaper",
     "error_occured": "Something went wrong!",
-    "join_discord": "Join eosDAC Community on Discord",
+    "join_discord": "Join VIGOR Community on Telegram",
     "key_features": "Key Features",
-    "open_discord": "open discord",
+    "open_discord": "open telegram",
     "read_constitution": "Constitution",
     "reg_as_cust_cand": "Candidate Registration",
     "reg_as_member": "Membership",
@@ -22,11 +22,11 @@
     "subscribe": "subscribe",
     "subscribe_newsletter": "Subscribe to our Newsletter",
     "valid_input_required": "Valid input required",
-    "visit_eosdac": "Visit our Website eosdac.io",
+    "visit_eosdac": "Whitepaper",
     "vote_cust": "Vote Custodians",
     "wallet": "Wallet",
-    "website_description": "Everything you'd like to know about eosUSD DAC can be found on our website at eosUSD.com.",
-    "welcome_to_esodac_member_client": "Welcome to the eosUSD DAC Member Client",
+    "website_description": "Read the VIGOR whitepaper",
+    "welcome_to_esodac_member_client": "VIGOR Member Client",
     "your_email": "Your Email",
     "your_language": "Your Language"
   },
