config file for jungle updated.

--- a/i18n/en_GB/index.json
+++ b/i18n/en_GB/index.json
@@ -26,7 +26,7 @@
     "vote_cust": "Vote Custodians",
     "wallet": "Wallet",
     "website_description": "Read the VIGOR whitepaper",
-    "welcome_to_esodac_member_client": "VIGOR Member Client",
+    "welcome_to_esodac_member_client": "VIGOR Stablecoin member client",
     "your_email": "Your Email",
     "your_language": "Your Language"
   },
